# face-client_old

./: README.md
100u_service/: build.gradle  proguard-rules.pro
100u_service/src/main/: AndroidManifest.xml
100u_service/src/main/res/drawable/: btn_no_press.xml  btn_press.xml  btn_select.xml
100u_service/src/main/res/layout/: activity_main.xml
100u_service/src/main/res/values/: strings.xml
app/: build.gradle
app/libs/: voiceprint.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/files/: faceVeriConfig.yml
app/src/main/assets/files/data/: 40
app/src/main/cpp/: CMakeLists.txt  face-libs.cpp
app/src/main/java/org/yanzi/activity/: BitmapActivity.java  BootBroadcastReceiver.java  CameraActivity.java  DbActivity.java  DrawRectActivity.java  HttpApplication.java  MainActivity.java  MeidaActivity.java  MyAccessibilityService.java  MyApplication.java  NativeActivity.java  ServiceActivity.java  SoundActivity.java  StartActivity.java  TestFragment.java
app/src/main/java/org/yanzi/camera/: CameraInterface.java
app/src/main/java/org/yanzi/mode/: ApkVersion.java  FaceData.java  GoogleFaceDetect.java  Response.java  User.java  Video.java
app/src/main/java/org/yanzi/ui/: FaceView.java  (+1 more)
app/src/main/res/layout/: activity_bitmap.xml  activity_camera.xml  activity_db.xml  activity_db2.xml  activity_draw_rect.xml  activity_http_application.xml  activity_main.xml  activity_meida.xml  activity_native.xml  activity_service.xml  activity_sound.xml  activity_start.xml  fragment.xml
captures/: Face_2017.02.16_09.45.txt
faceVeri/include/: FaceVeri.h
(+18 files in other folders)
